--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_install:
   - go get github.com/tcnksm/ghr
 after_success:
   - gox -osarch="darwin/amd64 linux/386 linux/amd64 linux/arm" -output "dist/{{.OS}}_{{.Arch}}_{{.Dir}}"
-  - ghr -u andrexus --token $GITHUB_TOKEN --replace --prerelease v0.1.0 dist/
+  - ghr -u andrexus --token $GITHUB_TOKEN --replace --prerelease $(git describe --abbrev=0 --tags) dist/
