--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ env:
   - "PATH=/home/travis/gopath/bin:$PATH"
 
 before_install:
+  - go get -u github.com/golang/dep/cmd/dep
   - curl -o build-prod.tar.gz -L https://github.com/andrexus/cloud-initer-frontend/releases/download/v0.1.0/build-prod.tar.gz
   - tar xzf build-prod.tar.gz
