--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -7,6 +7,9 @@
   version = "1.3.1"
 
 [[constraint]]
+  name = "gopkg.in/go-playground/validator.v9"
+
+[[constraint]]
   name = "github.com/Sirupsen/logrus"
   version = "0.11.5"
 
