--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ go:
   - tip
 env:
   - "PATH=/home/travis/gopath/bin:$PATH"
+  - FRONTEND_VERSION="0.1.3"
 
 before_install:
   - go get -u github.com/golang/dep/cmd/dep
-  - curl -o build-prod.tar.gz -L https://github.com/andrexus/cloud-initer-frontend/releases/download/v0.1.1/build-prod.tar.gz
+  - curl -o build-prod.tar.gz -L https://github.com/andrexus/cloud-initer-frontend/releases/download/v$FRONTEND_VERSION/build-prod.tar.gz
   - tar xzf build-prod.tar.gz
