--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -14,6 +14,10 @@
   version = "2.0.1"
 
 [[constraint]]
+  branch = "v2"
+  name = "gopkg.in/yaml.v2"
+
+[[constraint]]
   name = "github.com/Sirupsen/logrus"
   version = "0.11.5"
 
