--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ env:
   - "PATH=/home/travis/gopath/bin:$PATH"
 
 before_install:
-  - go get -u github.com/golang/dep/cmd/dep
   - curl -o build-prod.tar.gz -L https://github.com/andrexus/cloud-initer-frontend/releases/download/v0.1.2/build-prod.tar.gz
   - tar xzf build-prod.tar.gz
+
+script:
+  - make test build dist
