--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ go:
 
 env:
   - "PATH=/home/travis/gopath/bin:$PATH"
-  - FRONTEND_VERSION="0.1.3"
 
 script:
-  - curl -o build-prod.tar.gz -L https://github.com/andrexus/cloud-initer-frontend/releases/download/v$FRONTEND_VERSION/build-prod.tar.gz
+  - FRONTEND_VERSION=0.1.3 curl -o build-prod.tar.gz -L \
+      https://github.com/andrexus/cloud-initer-frontend/releases/download/v$FRONTEND_VERSION/build-prod.tar.gz
   - tar xzf build-prod.tar.gz
   - make test build dist
